--- a/Blog/home/templates/base.html
+++ b/Blog/home/templates/base.html
@@ -50,7 +50,7 @@
             {% if request.user.is_authenticated %}
             <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
               <a class="btn btn-primary mr-2" href="{% url 'add_blog' %}">Add Blog</a>
-              <a class="btn btn-warning" href="{% url 'login_view' %}">Logout</a>
+              <a class="btn btn-warning" href="{% url 'logout_view' %}">Logout</a>
             </li>
             {% else %}
             <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
