--- a/Blog/home/templates/register.html
+++ b/Blog/home/templates/register.html
@@ -28,9 +28,9 @@
               </div>
             </div>
             <!-- Submit-->
-            <button class="btn btn-lg btn-block btn-primary">Sign in</button>
+            <button class="btn btn-lg btn-block btn-primary">Register</button>
            
-            <p class="text-center"><small class="text-muted text-center">Don't have an account yet? <a href="signup.html">Sign Up                </a></small></p>
+            <p class="text-center"><small class="text-muted text-center">Already have an account?<a href="{% url 'login_view' %}"> Sign In</a></small></p>
           </form><a class="close-absolute mr-md-5 mr-xl-6 pt-5" href="index-2.html"> 
             <svg class="svg-icon w-3rem h-3rem">
               <use xlink:href="#close-1"> </use>
