--- a/Blog/home/templates/update_blog.html
+++ b/Blog/home/templates/update_blog.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-md-12">
                 <label>Enter Blog Title</label>
-                <input name="title" type="text" class="form-control" placeholder="Enter Title Here">
+                <input name="title" type="text" class="form-control" placeholder="Enter Title Here" value="{{ blog_obj.title }}">
             </div>
             <div class="col-md-12">
                 {{ form.media }}
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <button class="btn btn-primary mt-4" type="submit">Create Blog</button>
+        <button class="btn btn-primary mt-4" type="submit">Update Blog</button>
     </form>
 </div>
 
