day3.1: added user registration view and api, in addition to user verification with a unique token via email

--- a/Blog/home/templates/register.html
+++ b/Blog/home/templates/register.html
@@ -28,7 +28,7 @@
               </div>
             </div>
             <!-- Submit-->
-            <button class="btn btn-lg btn-block btn-primary">Register</button>
+            <button class="btn btn-lg btn-block btn-primary" onclick="register()">Register</button>
            
             <p class="text-center"><small class="text-muted text-center">Already have an account?<a href="{% url 'login_view' %}"> Sign In</a></small></p>
           </form><a class="close-absolute mr-md-5 mr-xl-6 pt-5" href="index-2.html"> 
