--- a/Blog/home/templates/base.html
+++ b/Blog/home/templates/base.html
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-lg fixed-top shadow navbar-light bg-white">
       <div class="container-fluid">
         <div class="d-flex align-items-center"><a class="navbar-brand py-1" href="/">
-            <h3>Code Keen Blog</h3>
+            <h3>Rathod's Blog</h3>
         </div>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
           data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
